--- a/contact.html
+++ b/contact.html
@@ -33,31 +33,45 @@
       </ul>
       </li>
   </div>
+  
 </nav>
 
-<center><img src="sno1.jpg" alt="New York">
+<!--<h1> Josie Hinke </h1>-->
+<h4> CONTACT ME </h4>
 
-<center><img src="sno2.jpg" alt="Space Needle">
-
-<!--<div class='container'>
+<div class='container'>
   <div class='wrap'>
     <div class='crop'>
-      <img src='sno1.jpg'>
+     <a href="mailto:josieemma@gmail.com?"> <img src="adobe.jpg"> </a>
     </div>
   </div>
+  
   <div class='wrap'>
     <div class='crop'>
-      <img src='sno2.jpg'>
-    </div>
-  </div>
-  <div class='wrap'>
-    <div class='crop'>
-      <img src='sno3.jpg'>
+     <a href="https://www.instagram.com/josiehinke/?hl=en"> <img src="adobe2.jpg"> </a>
     </div>
   </div>
 
-
-</div>-->
-
-
-</body>
+  <div class='wrap'>
+    <div class='crop'>
+     <a href="https://www.linkedin.com/profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button"> <img src= "adobe3.jpg"> </a>
+  </div>
+  </div>
+  
+  <div class='wrap'>
+    <div class='crop'>
+     <a href="https://www.facebook.com/profile.php?id=100010278180112&fref=ts"> <img src="adobe4.jpg"> </a>
+    </div>
+  </div>
+  
+  <div class='wrap'>
+    <div class='crop'>
+     <a href="http://www.pigeongram.com/pgorder.php"> <img src="adobe5.jpg"> </a>
+    </div>
+  </div>
+  
+ <div class='wrap'>
+    <div class='crop'>
+     <a href="https://github.com/josiehinke"> <img src="adobe6.jpg"> </a>
+    </div>
+  </div>
