--- a/reportolio.html
+++ b/reportolio.html
@@ -63,7 +63,7 @@ style="width:623px;height:623px;">-->
   </div>
   <div class='wrap'>
     <div class='crop'>
-      <img src='jos3.jpg'>
+      <img src='jos3.jpeg'>
     </div>
   </div>
   <div class='wrap'>
