--- a/index.html
+++ b/index.html
@@ -34,4 +34,30 @@
       </li>
   </div>
 </nav>
+
+<center><img src="sno1.jpg" alt="New York">
+
+<center><img src="sno2.jpg" alt="Space Needle">
+
+<!--<div class='container'>
+  <div class='wrap'>
+    <div class='crop'>
+      <img src='sno1.jpg'>
+    </div>
+  </div>
+  <div class='wrap'>
+    <div class='crop'>
+      <img src='sno2.jpg'>
+    </div>
+  </div>
+  <div class='wrap'>
+    <div class='crop'>
+      <img src='sno3.jpg'>
+    </div>
+  </div>
+
+
+</div>-->
+
+
 </body>
