--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a class="navbar-brand">Josie Hinke</a>
     </div>
       <ul class="nav navbar-nav">
-      <li><a href="revamp.html">HOME</a></li>
+      <li><a href="index.html">HOME</a></li>
       <ul class="nav navbar-nav">
       <li><a href="reportolio.html">ABOUT</a></li> <!--make sure it links to right page-->
       <ul class="nav navbar-nav">
