--- a/reportolio.html
+++ b/reportolio.html
@@ -35,7 +35,7 @@
   </div>
 </nav>
 
-<!--<center><img src="new.jpg" alt="New York"
+<!--<center><img src="new.JPG" alt="New York"
 style="width:446px;height:595px;">
 
 <center><img src="space.jpg" alt="Space Needle"
@@ -53,107 +53,107 @@ style="width:623px;height:623px;">-->
 <div class='container'>
   <div class='wrap'>
     <div class='crop'>
-      <img src="jos1.jpg">
+      <img src="jos1.JPG">
     </div>
   </div>
   <div class='wrap'>
     <div class='crop'>
-      <img src='jos2.jpg'>
+      <img src='jos2.JPG'>
     </div>
   </div>
   <div class='wrap'>
     <div class='crop'>
-      <img src='jos3.jpg'>
+      <img src='jos3.JPG'>
     </div>
   </div>
   <div class='wrap'>
     <div class='crop'>
-      <img src='new.jpg'>
+      <img src='new.JPG'>
     </div>
   </div>
   <div class='wrap'>
     <div class='crop'>
-      <img src='space.jpg'>
+      <img src='space.JPG'>
     </div>
   </div>
    <div class='wrap'>
     <div class='crop'>
-      <img src='jos4.jpg'>
+      <img src='jos4.JPG'>
     </div>
   </div>
    <div class='wrap'>
     <div class='crop'>
-      <img src='jos5.jpg'>
+      <img src='jos5.JPG'>
     </div>
   </div>
    <div class='wrap'>
     <div class='crop'>
-      <img src='jos6.jpg'>
+      <img src='jos6.JPG'>
     </div>
   </div>
  <div class='wrap'>
     <div class='crop'>
-      <img src='jos7.jpg'>
+      <img src='jos7.JPG'>
     </div>
   </div>
  <div class='wrap'>
     <div class='crop'>
-      <img src='jos8.jpg'>
+      <img src='jos8.JPG'>
     </div>
   </div>
  <div class='wrap'>
     <div class='crop'>
-      <img src='jos9.jpg'>
+      <img src='jos9.JPG'>
     </div>
   </div>
    <div class='wrap'>
     <div class='crop'>
-      <img src='jos10.jpg'>
+      <img src='jos10.JPG'>
     </div>
   </div>
    <div class='wrap'>
     <div class='crop'>
-      <img src='jos11.jpg'>
+      <img src='jos11.JPG'>
     </div>
   </div>
    <div class='wrap'>
     <div class='crop'>
-      <img src='jos12.jpg'>
+      <img src='jos12.JPG'>
     </div>
   </div>
    <div class='wrap'>
     <div class='crop'>
-      <img src='jos13.jpg'>
+      <img src='jos13.JPG'>
     </div>
   </div>
  <div class='wrap'>
     <div class='crop'>
-      <img src='jos14.jpg'>
+      <img src='jos14.JPG'>
     </div>
   </div>
    <div class='wrap'>
     <div class='crop'>
-      <img src='jos15.jpg'>
+      <img src='jos15.JPG'>
     </div>
   </div>
    <div class='wrap'>
     <div class='crop'>
-      <img src='jos16.jpg'>
+      <img src='jos16.JPG'>
     </div>
   </div>
    <div class='wrap'>
     <div class='crop'>
-      <img src='jos17.jpg'>
+      <img src='jos17.JPG'>
     </div>
   </div>
    <div class='wrap'>
     <div class='crop'>
-      <img src='jos18.jpg'>
+      <img src='jos18.JPG'>
     </div>
   </div>
    <div class='wrap'>
     <div class='crop'>
-      <img src='jos19.jpg'>
+      <img src='jos19.JPG'>
     </div>
   </div>
   
