--- a/reportolio.html
+++ b/reportolio.html
@@ -53,12 +53,12 @@ style="width:623px;height:623px;">-->
 <div class='container'>
   <div class='wrap'>
     <div class='crop'>
-      <img src="jos1.JPG">
+      <img src="jos1.JPEG">
     </div>
   </div>
   <div class='wrap'>
     <div class='crop'>
-      <img src='jos2.JPG'>
+      <img src='jos2.JPEG'>
     </div>
   </div>
   <div class='wrap'>
