--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,9 @@
       <ul class="nav navbar-nav">
       <li><a href="contact.html">CONTACT</a></li>
       </ul>
+      <ul class="nav navbar-nav">
+      <li><a href="listen.html">LISTEN</a></li>
+      </ul>
       </li>
   </div>
   
