--- a/listen.html
+++ b/listen.html
@@ -44,4 +44,9 @@
 
     <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Ajosiehinke%3Aplaylist%3A2LiVDuL4AAe6zFgCWzbcNE" width="300" height="300" frameborder="0" allowtransparency="true"></iframe>
     <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Ajosiehinke%3Aplaylist%3A5GvQd06GCPbDRleozrWUF5" width="300" height="300" frameborder="0" allowtransparency="true"></iframe>
+    <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Ajosiehinke%3Aplaylist%3A2VNWgHBK7GHqm1Al3UkGrb" width="300" height="300" frameborder="0" allowtransparency="true"></iframe>
+    <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Ajosiehinke%3Aplaylist%3A0dy44Xw8qjfWas9Gztex0k" width="300" height="300" frameborder="0" allowtransparency="true"></iframe>
+    <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Ajosiehinke%3Aplaylist%3A7zR7ghxxZp8MWOBnGhWLG1" width="300" height="300" frameborder="0" allowtransparency="true"></iframe>
+    <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Ajosiehinke%3Aplaylist%3A45eKYcBA5FOtnTeju8ENRd" width="300" height="300" frameborder="0" allowtransparency="true"></iframe>
+    <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Ajosiehinke%3Aplaylist%3A0Rp07Lf79Yl96aQAq4xAaB" width="300" height="300" frameborder="0" allowtransparency="true"></iframe>
   </div>
